# libdistro

./: CMakeLists.txt  README.md
include/distro/: errors.hh  package.hh  regex.hh  semver.hh  versions.hh
src/: errors.cc  package.cc  regex.cc  semver.cc  versions.cc
